feat: Refactor retention policy handling and improve batch log entry persistence